Update Aggiornamento NFT ogni ora.yml

--- a/.github/workflows/Aggiornamento NFT ogni ora.yml
+++ b/.github/workflows/Aggiornamento NFT ogni ora.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Run script
         run: node full_nft_gist_2.0.js
         env:
-          G_TOKEN: ${{ secrets.G_TOKEN }}
+          G_TOKEN: ${{ secrets.G_TOKEN }} # Token GitHub
+          TENSOR_API_KEY: ${{ secrets.TENSOR_API_KEY }} # Token Tensor
